     It is now the default behaviour unless overridden with the flag_rgb key.
   * New key type_tree in unit filters - similar to type, but also matches any
     possible advancements of the specified unit types.
   * [options][combo] in [scenario], [modifications], etc has been renamed
     to [choice] (which is more accurate). The old name still works for now.
* Lua API:
   * Added new functions wesnoth.fire_event_by_id and fire_event_by_name. The
     old function wesnoth.fire_event is now an alias for wesnoth.fire_event_by_name
   * Added new function wesnoth.remove_modifications, which removes applied
     modifications of the chosen type from a unit. The most efficient use is to
     remove all modifications with a specific duration value.
     Also callable as u:remove_modifications.
   * The built-in conditionals have_unit, have_location, and variable are now
     present in the wesnoth.wml_conditionals table. This means they can be
     directly called, extended with new features, or even overridden with custom
     implementations.
   * New recall_filter field in unit proxy returns the [filter_recall] config
   * New variations field in unit_type proxy returns a list of unit variations
     Each member is a full unit_type describing that variation.
     The table is iterable with pairs().
   * Lua side, unit_type, and unit attack proxies can now be compared with ==
     with identity semantics. (Previously, each time such a proxy was obtained,
     it would produce a new object that did not compare equal to any others.)
   * Lua dialog functions now support the stacked widget and the unit preview pane
   * New wesnoth.show_menu function shows a dropdown menu at the mouse location
   * Lua attack proxy has new read_only field which is true for unit_type attacks
     If true, attempts to change the attack will result in an error.
   * The name field in Lua attack proxy is now writable
   * The attacks field in the Lua unit proxy is now writable