@@ -224,7 +224,7 @@ surface wipe_alpha_modification::operator()(const surface& src) const
 
 surface adjust_alpha_modification::operator()(const surface & src) const
 {
-	return adjust_surface_alpha(src, amount_);
+	return adjust_surface_alpha_formula(src, formula_);
 }
 
 surface crop_modification::operator()(const surface& src) const
@@ -848,23 +848,16 @@ REGISTER_MOD_PARSER(WIPE_ALPHA, )
 // Adjust Alpha
 REGISTER_MOD_PARSER(ADJUST_ALPHA, args)
 {
-	const std::vector<std::string>& params = utils::split(args, ',');
+	// Formulas may contain commas, so use parenthetical split to ensure that they're properly considered a single argument.
+	// (A comma in a formula is only valid in function parameters or list/map literals, so this should always work.)
+	const std::vector<std::string>& params = utils::parenthetical_split(args, ',', "([", ")]");
 
 	if(params.size() != 1) {
 		ERR_DP << "~ADJUST_ALPHA() requires exactly 1 arguments" << std::endl;
 		return nullptr;
 	}
 
-	std::string opacity_str = params.at(0);
-
-	const size_t p100_pos = opacity_str.find('%');
-
-	if (p100_pos == std::string::npos) {
-		return new adjust_alpha_modification(lexical_cast_default<fixed_t> (opacity_str));
-	} else {
-		float opacity = lexical_cast_default<float>(opacity_str.substr(0,p100_pos)) / 100.0f;
-		return new adjust_alpha_modification(static_cast<fixed_t> (255 * opacity));
-	}
+	return new adjust_alpha_modification(params.at(0));
 }
 
 // Color-shift
